<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">airmanage</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">菜单</string>
    <string name="manager">管理</string>
    <string name="sercher">查询</string>
    <string name="num">航班号</string>
    <string name="startstation">起点站</string>
    <string name="endstation">终点站</string>
    <string name="banqi">班期</string>
    <string name="jixing">机型</string>
    <string name="starttime">起飞时间</string>
    <string name="endtime">到达时间</string>
    <string name="money">票价</string>

</resources>
