<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingTop="100dp"
        android:paddingLeft="240dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/num"/>
        <TextView
            android:layout_marginLeft="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/num"
            android:textSize="25dp"
            />
    </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/startstation"/>
            <TextView
                android:layout_marginLeft="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/num"
                android:textSize="25dp"
                />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/endstation"/>
            <TextView
                android:layout_marginLeft="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/num"
                android:textSize="25dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/banqi"/>
            <TextView
                android:layout_marginLeft="107dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/num"
                android:textSize="25dp"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/jixing"/>
            <TextView
                android:layout_marginLeft="107dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/num"
                android:textSize="25dp"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/starttime"/>
            <TextView
                android:layout_marginLeft="57dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/num"
                android:textSize="25dp"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/endtime"/>
            <TextView
                android:layout_marginLeft="57dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/num"
                android:textSize="25dp"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/money"/>
            <TextView
                android:layout_marginLeft="107dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/num"
                android:textSize="25dp"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>