<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/mainLyout"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tt"
        android:paddingLeft="100dp"
        android:paddingTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:text="@string/title" />

    <LinearLayout
        android:paddingLeft="120dp"
        android:paddingTop="20dp"
        android:layout_below="@+id/tt"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:focusable="true"
            android:id="@+id/searchlyout"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/im1"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:scaleType="fitXY"
                android:background="@color/halfblack"
                android:src="@drawable/ic_action_emo_angry"/>
            <TextView
                android:id="@+id/bt1"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:background="@color/txhalfblack"
                android:text="@string/sercher"/>

        </LinearLayout>

        <LinearLayout
            android:focusable="true"
            android:id="@+id/managerlyout"
            android:paddingLeft="30dp"
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/im2"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@color/halfblack"
                android:src="@drawable/ic_action_emo_basic"/>
            <TextView
                android:id="@+id/bt2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:background="@color/txhalfblack"
                android:text="@string/manager"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
